--- a/app/src/main/res/layout/tab4profile.xml
+++ b/app/src/main/res/layout/tab4profile.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="Log Out" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/userImage"
                 android:layout_width="175dp"
                 android:layout_height="175dp"
@@ -59,36 +59,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="250dp"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/profile_firstName"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/ProfPic"
-                    app:layout_constraintRight_toRightOf="@+id/userImage"
-                    android:layout_height="wrap_content"
-                    android:hint="First Name"
-                    android:layout_weight="0.44" />
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.44">
 
-                <Button
-                    android:text="Edit"
-                    android:id="@+id/editName"
-                    android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:layout_width="40dp"
-                    android:layout_weight="1"
-                    android:layout_height="40dp" />
+                    <TextView
+                        android:id="@+id/profile_firstName"
+                        android:layout_width="178dp"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_weight="0.44"
+                        android:ems="10"
+                        android:hint="First Name"
+                        android:inputType="textPersonName"
+                        app:layout_constraintRight_toRightOf="@+id/userImage"
+                        app:layout_constraintTop_toBottomOf="@+id/ProfPic"
+                        android:layout_marginRight="-19dp" />
 
-                <Button
-                    android:text="Save"
-                    android:id="@+id/saveName"
-                    android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:layout_width="40dp"
-                    android:layout_weight="1"
-                    android:layout_height="40dp"
-                    />
+                    <Button
+                        android:id="@+id/editName"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:text="Edit"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintRight_toLeftOf="@+id/saveName"
+                        android:layout_marginRight="8dp" />
+
+                    <Button
+                        android:id="@+id/saveName"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="0dp"
+                        android:layout_weight="1"
+                        android:text="Save"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+                </android.support.constraint.ConstraintLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -120,47 +137,61 @@
                 android:id="@+id/credDisplay" />
 
             <TextView
+                android:id="@+id/credits"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text="Credits:"
-                android:textSize="20dp"
                 android:layout_marginLeft="50dp"
                 android:ems="10"
-                android:id="@+id/credits" />
+                android:inputType="text"
+                android:text="Credits:"
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:text="Address:"
-                    android:textSize="20dp"
-                    android:ems="10"
-                    android:id="@+id/address" />
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <Button
-                    android:text="Edit"
-                    android:id="@+id/editAddress"
-                    android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:layout_width="40dp"
-                    android:layout_weight="1"
-                    android:layout_height="40dp" />
+                    <TextView
+                        android:id="@+id/address"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:inputType="text"
+                        android:text="Address:"
+                        android:textSize="20dp" />
 
-                <Button
-                    android:text="Save"
-                    android:id="@+id/saveAddress"
-                    android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:layout_width="40dp"
-                    android:layout_weight="1"
-                    android:layout_height="40dp"
-                    />
+                    <Button
+                        android:id="@+id/editAddress"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:text="Edit"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/saveAddress"
+                        android:layout_marginRight="8dp"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <Button
+                        android:id="@+id/saveAddress"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="0dp"
+                        android:layout_weight="1"
+                        android:text="Save"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+                </android.support.constraint.ConstraintLayout>
 
             </LinearLayout>
 
@@ -223,33 +254,48 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/interests"
-                    android:layout_width="214dp"
-                    android:layout_height="wrap_content"
-                    android:text="Interests:"
-                    android:textSize="20dp"
-                    android:layout_weight="1.17" />
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.17">
 
-                <Button
-                    android:id="@+id/editInterests"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="0.41"
-                    android:text="Edit"
-                    android:textAlignment="center"
-                    android:textSize="10sp" />
+                    <TextView
+                        android:id="@+id/interests"
+                        android:layout_width="214dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.17"
+                        android:text="Interests:"
+                        android:textSize="20dp" />
 
-                <Button
-                    android:text="Save"
-                    android:id="@+id/saveInterests"
-                    android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:layout_width="40dp"
-                    android:layout_weight="0.34"
-                    android:layout_height="40dp"
-                    />
+                    <Button
+                        android:id="@+id/editInterests"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="0.41"
+                        android:text="Edit"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintRight_toLeftOf="@+id/saveInterests"
+                        android:layout_marginRight="8dp" />
 
+                    <Button
+                        android:id="@+id/saveInterests"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="0.34"
+                        android:text="Save"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        android:layout_marginRight="8dp"
+                        app:layout_constraintRight_toRightOf="parent" />
+
+                </android.support.constraint.ConstraintLayout>
 
 
             </LinearLayout>
