--- a/app/src/main/res/layout/activity_post_deadline_exchange.xml
+++ b/app/src/main/res/layout/activity_post_deadline_exchange.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.cs48.g12.gauchogifts.PostDeadlineExchange">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
